--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,13 @@ test:
   image: golang:1.17
   script: 
    - go test .
-
+  rules:
+    - changes:
+      
+      - ".go"
+      when: always
+    - when: never  
+      
 
 
 
